--- a/angular.json
+++ b/angular.json
@@ -72,7 +72,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Step9:build"
+            "browserTarget": "Step9:build",
+            "port": 10001
           },
           "configurations": {
             "production": {
